# LLM-Semantic-Caching-Layer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/analytics/: __init__.py  near_miss.py  threshold.py  validation.py
app/api/: __init__.py  analytics.py  cache.py  chat.py  dependencies.py  metrics.py
app/cache/: __init__.py  memory_store.py  namespace.py  semantic_cache.py  similarity.py  store.py
app/core/: __init__.py  config.py  logging.py  middleware.py
app/embeddings/: __init__.py  base.py  fake.py  openai.py
app/models/: __init__.py  cache.py  chat.py
app/monitoring/: __init__.py  metrics.py
app/policies/: __init__.py  threshold_engine.py  ttl_classifier.py
app/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  router.py
app/proxy/: __init__.py  echo.py  service.py  streaming.py
dashboards/: README.md  semantic-cache-overview.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  ROADMAP.md
docs/img/: README.md
infra/: prometheus.yml
infra/grafana/provisioning/dashboards/: dashboards.yml
loadtests/: locustfile.py  prompts.py
loadtests/reports/: benchmark.json
scripts/: benchmark.py  run_loadtest.sh
tests/: conftest.py  test_cache.py  test_cache_invalidation.py  test_chat_endpoint.py  test_embeddings.py  test_hardening.py  test_health.py  test_integration_openai.py  test_load_convergence.py  test_metrics.py  test_near_miss.py  test_providers.py  test_streaming.py  test_threshold_analytics.py  test_threshold_engine.py  test_ttl_policy.py  test_validation.py
tests/integration/: test_redis_store.py
