[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-semantic-caching-layer"
version = "0.1.0"
description = "A drop-in OpenAI-compatible semantic caching proxy for LLM APIs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ayush Pramanik" }]
keywords = ["llm", "cache", "semantic", "proxy", "openai", "redis", "vector-search"]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "redis>=5.0",
    "redisvl>=0.3.0",
    "numpy>=1.26",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "tenacity>=8.2",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "fakeredis>=2.21",
    "ruff>=0.4",
    "mypy>=1.9",
]
load = ["locust>=2.25"]
qdrant = ["qdrant-client>=1.9"]

[project.urls]
Homepage = "https://github.com/ayushpramanik/LLM-Semantic-Caching-Layer"
Repository = "https://github.com/ayushpramanik/LLM-Semantic-Caching-Layer"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that require a live Redis / external service",
    "load: load-test oriented checks",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# B008: FastAPI Depends() in defaults. UP042: str-Enum is intentional for
# pydantic compatibility. B027: empty async hooks are optional override points.
ignore = ["B008", "UP042", "B027"]

[tool.ruff.lint.per-file-ignores]
# Test helpers use dict(...) for readable keyword construction.
"tests/**" = ["C408"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
